[package]
name = "rust-monkey"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-as-inner = "0.5.1"
phf = { version = "0.11.1", features = ["macros"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
module-name-repetitions = "allow"
wildcard-imports = { level = "allow", priority = 1 }
# vvv -- for parselets that clippy doesn't understand
unnecessary-wraps = { level="allow", priority = 1 }
